# coral-log

./: CMakeLists.txt  README.md
coral/: CMakeLists.txt  FixedStream.h  Logging.cc  Logging.h  StringUtil.cc  StringUtil.h  Time.cc  Time.h
coral/test/: LoggingTest.cc
